--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.36.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
