--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=login
 spring.datasource.url=jdbc:sqlite:login_db.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
+
+spring.mail.host=live.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=api
+spring.mail.password=8ff09de4682b166f1fd24528e13e26ed
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
