--- a/pom.xml
+++ b/pom.xml
@@ -76,14 +76,13 @@
 			<version>1.6.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.mailersend</groupId>
 			<artifactId>java-sdk</artifactId>
 			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.swing</groupId>
-			<artifactId>javax.swing-api</artifactId>
-			<version>1.1</version>
 		</dependency>
 	</dependencies>
 
