--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.formdev</groupId>
+			<artifactId>flatlaf</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.mailersend</groupId>
 			<artifactId>java-sdk</artifactId>
 			<version>1.0.0</version>
